Test app s izmjenama main.xml i student4life.java klase

--- a/Student4Life/res/layout/main.xml
+++ b/Student4Life/res/layout/main.xml
@@ -11,6 +11,13 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="bluetooth"
+        android:text="Upali Bluetooth" />
+
+    <Button
         android:id="@+id/button1"
         android:layout_width="84dp"
         android:layout_height="wrap_content"
@@ -23,5 +30,22 @@
         android:layout_height="wrap_content"
         android:onClick="MojButton2"
         android:text="@string/odbaci" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:onClick="oapp"
+            android:text="O aplikaciji" />
+
+    </RelativeLayout>
 
 </LinearLayout>
